1999-07-08  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdobuf.cc (write): Optimized this routine better for the case
	where the amount of data to be written will fit inside the buffer.

1999-07-05  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdbuf.h (fdobuf,fdibuf): Made some of the routines here virtual
	in order to extend it properly.
	Added "tell()" operations to both fdibuf and fdobuf to indicate
	the current logical read/write point.

1999-07-04  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdobuf_chownmod.cc: Added two new routines chown and chmod,
	which operate directly on the open fd.

1999-06-30  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdibuf_mystring.cc (getline): Make this routine return the
	number of bytes actually read, including the delimiter, even
	though the delimiter is not added to the returned string.

1999-06-29  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdibuf.cc (fdibuf): Added a 'seekfwd' function to seek forwards
	"o" bytes.

	* fdibuf_mystring.cc (getline): Added locking and set the count
	properly.

1999-06-28  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdibuf.cc (get): Make sure count is set for get.

1999-06-06  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdbuf.cc (fdbuf): Fixed long-standing bug -- I forgot to delete
	the buffer in the destructor.
	(close): Modified the code to ensure that the fd is not closed
	twice (as would happen when destructing the fdbuf).

1999-05-31  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdobuf.cc: Redefined flush as nflush; added sync code to nflush;
	made flush and sync call nflush; added mutex lock calls to all
	public methods.

	* fdibuf.cc: Added mutex lock calls to all public methods.

	* fdbuf.cc: Added debugging implementations of lock() and unlock()
	mutex operators (to be removed before real use).

1999-05-28  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdobuf.cc (fdobuf): Fixed missing initialization of bufpos in
	one of the two constructors.
