@@ -4,8 +4,10 @@ INCLUDES = -I..
 libfdbuf_a_SOURCES = \
 	fdbuf.h \
 	fdbuf.cc \
+	fdibuf.h \
 	fdibuf.cc \
 	fdibuf_mystring.cc \
+	fdobuf.h \
 	fdobuf.cc \
 	fdobuf_chownmod.cc \
 	fdbuf_copy.cc
