@@ -74,101 +74,9 @@ protected:
 #endif
 };
 
-class fdobuf;
-
-class fdibuf : protected fdbuf
-{
-public:
-  fdibuf(const char* filename, unsigned bufsz = FDBUF_SIZE);
-  fdibuf(int fdesc, bool dc = false, unsigned bufsz = FDBUF_SIZE);
-  virtual ~fdibuf();
-  bool close() { lock(); bool r = fdbuf::close(); unlock(); return r; }
-  bool eof() const;
-  bool operator!() const ;
-  operator bool() const { return !operator!(); }
-  virtual bool get(char& ch);
-  virtual bool getline(mystring& out, char terminator = '\n');
-  virtual bool getnetstring(mystring& out);
-  virtual bool read(char*, unsigned);
-  bool read(unsigned char* b, unsigned l) { return read((char*)b, l); }
-  bool read(signed char* b, unsigned l) { return read((char*)b, l); }
-  unsigned last_count() { return count; }
-  bool seek(unsigned o);
-  bool seekfwd(unsigned o);
-  bool rewind() { return seek(0); }
-  unsigned tell() const { return offset-buflength+bufstart; }
-protected:
-  unsigned count;		// Number of bytes read by last operation
-  bool refill();
-};
-
-class fdobuf : protected fdbuf
-{
-public:
-  enum openflags { create=O_CREAT, 
-		   excl=O_EXCL,
-		   trunc=O_TRUNC,
-		   append=O_APPEND };
-
-  fdobuf(const char* filename, int, int mode = 0666,
-	 unsigned bufsz = FDBUF_SIZE);
-  fdobuf(int fdesc, bool dc=false, unsigned bufsz = FDBUF_SIZE);
-  virtual ~fdobuf();
-  bool close();
-  bool operator!() const;
-  operator bool() const
-    {
-      return !operator!();
-    }
-  bool flush();
-  bool sync();
-  virtual bool write(char);
-  bool write(unsigned char c) { return write((char)c); }
-  bool write(signed char c) { return write((char)c); }
-  virtual bool write(const char*, unsigned);
-  bool write(const unsigned char* b, unsigned l) { return write((char*)b, l); }
-  bool write(const signed char* b, unsigned l) { return write((char*)b, l); }
-  unsigned last_count() { return count; }
-  bool seek(unsigned o);
-  bool rewind() { return seek(0); }
-  unsigned tell() const { return offset + bufpos; }
-
-  bool chown(uid_t, gid_t) const;
-  bool chmod(mode_t) const;
-  
-  fdobuf& operator<<(const char* str)
-    {
-      write(str, strlen(str));
-      return *this;
-    }
-  fdobuf& operator<<(char ch)
-    {
-      write(ch);
-      return *this;
-    }
-  fdobuf& operator<<(fdobuf& (*manip)(fdobuf&))
-    {
-      return manip(*this);
-    }
-  fdobuf& operator<<(unsigned long);
-  fdobuf& operator<<(signed long);
-  fdobuf& operator<<(unsigned i) { return operator<<((unsigned long)i); }
-  fdobuf& operator<<(signed i) { return operator<<((signed long)i); }
-  fdobuf& operator<<(unsigned short i) { return operator<<((unsigned long)i); }
-  fdobuf& operator<<(signed short i) { return operator<<((signed long)i); }
-protected:
-  virtual bool nflush(bool withsync);
-
-  unsigned bufpos;		// Current write position in the buffer
-  unsigned count;		// Number of bytes written by last operation
-};
-
-fdobuf& endl(fdobuf& fd);
+#include "fdbuf/fdibuf.h"
+#include "fdbuf/fdobuf.h"
 
 bool fdbuf_copy(fdibuf&, fdobuf&, bool noflush = false);
 
-extern fdobuf fout;
-extern fdobuf ferr;
-extern fdibuf fin;
-
-#endif // NULLMAILER__FDBUF__H__
+#endif // FDBUF__H__
